bash: remove unused aliases